# QuickRec

./: main.py  pyproject.toml
quickrec/: ocr.py
quickrec/scanner/: __init__.py  data.py  scanner.py
quickrec/scanner/platform/: wechat.py
